# 100x-devs-hotel-booking-platform

./: Cargo.toml
.sqlx/: query-4203f8739498e119a8fdeb5ef246a7f7cb868e09afc2a4f4732ef33630283525.json
migrations/: 20260208183737_init_schema.sql
src/: main.rs
src/db/: mod.rs
src/handlers/: auth.rs  auth_middleware.rs  bookings.rs  hotels.rs  mod.rs  reviews.rs  rooms.rs
src/models/: auth.rs  bookings.rs  hotels.rs  mod.rs  response.rs  reviews.rs  rooms.rs
src/routes/: auth.rs  bookings.rs  hotels.rs  mod.rs  reviews.rs  rooms.rs
tests/: index.test.ts
